--- a/pom.xml
+++ b/pom.xml
@@ -458,6 +458,8 @@
                     <requirePluginVersions>
                       <message>Best Practice is to always define plugin versions</message>
                       <phases>clean,deploy,install</phases>
+                      <!-- ignore these for version check as they are part of the build -->
+                      <unCheckedPluginList>org.geotools.maven:jjtree-javacc, org.geotools.maven:xmlcodegen, org.geotools.maven:jar-collector</unCheckedPluginList>
                     </requirePluginVersions>
                   </rules>
                 </configuration>
@@ -1730,6 +1732,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.0.0-M1</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
         </plugin>
       </plugins>
     </pluginManagement>
